Native2Ascii初実装